Refactor: Update configuration, utilities, and security components